fix: frame shadow top overflow

--- a/shared/components/company-frame/company-frame.module.scss
+++ b/shared/components/company-frame/company-frame.module.scss
@@ -2,6 +2,8 @@
 
 .companyFrame {
   display: flex;
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.75);
+  margin-bottom: 4rem;
   .companySidebar {
     padding: 2rem;
     width: 32%;
