--- a/shared/components/company-header/company-header.module.scss
+++ b/shared/components/company-header/company-header.module.scss
@@ -40,7 +40,7 @@
   .companyHeaderLinksLine {
     height: 72px;
     background: #56aaa6;
-    border-radius: 4px;
+    border-radius: 4px 4px 0 0;
     padding-left: 160px;
     display: flex;
     align-items: center;
